2005-08-17  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_inotify.c: (gam_inotify_add_subscription),
	(gam_inotify_remove_subscription), (gam_inotify_nolonger_missing),
	(gam_inotify_nolonger_link), (gam_inotify_add_link),
	(gam_inotify_scan_links), (gam_inotify_stat_changed),
	(gam_inotify_poll_link): Redo link handling. This should work around the
	race. Also fixed some real bugs in the last iteration.

2005-08-16  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_inotify.c: (gam_inotify_data_new),
	(gam_inotify_process_event), (gam_inotify_send_initial_events),
	(gam_inotify_add_subscription), (gam_inotify_remove_subscription),
	(gam_inotify_init), (gam_inotify_is_missing),
	(gam_inotify_add_missing), (gam_inotify_rm_missing),
	(gam_inotify_nolonger_missing), (gam_inotify_scan_missing),
	(gam_inotify_is_link), (gam_inotify_nolonger_link),
	(links_list_compare), (gam_inotify_add_link),
	(gam_inotify_rm_link), (gam_inotify_scan_links): Attempt to handle links
	according to the FAM specification. Racey as hell.
	* server/gam_subscription.c: (gam_subscription_shutdown):
	* server/gam_subscription.h: Add shutdown function -- not used though.

2005-08-16  John McCutchan  <ttb@tentacle.dhs.org>

	* server/Makefile.am:
	* server/gam_poll_basic.c: (gam_poll_basic_init),
	(gam_poll_basic_add_subscription),
	(node_remove_directory_subscription),
	(gam_poll_basic_remove_subscription),
	(gam_poll_basic_remove_all_for), (gam_poll_generic_node_changed),
	(gam_poll_basic_poll_file), (gam_poll_basic_scan_callback):
	* server/gam_poll_basic.h: Add a basic poll backend that does pretty much
	what the dnotify poll backend does, but without any kernel support.
	* server/gam_server.h: Fix typo.

2005-08-15  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_inotify.c: (gam_inotify_process_event): Change debug output

2005-08-15  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_dnotify.c: (gam_dnotify_directory_handler_internal):